--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node ./index.ts",
     "send": "ts-node ./send-events.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-node ./tests.ts"
   },
   "author": "",
   "license": "ISC",
